# SimpleGL

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
include/: shader.cpp  shader.hpp
shader/: simple.fs
